# TabbyTerm

./: Cargo.toml  README.md
.github/workflows/: release-windows.yml
crates/app/src/: main.rs
crates/terminal_core/src/pty/: mod.rs
crates/terminal_core/src/vt_parser/: mod.rs
crates/ui/src/: lib.rs
crates/ui/src/theme/: mod.rs
